--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,9 +7,21 @@ body{
 .app{
     height: 90%;
     width: 80%;
-    background-color: red;
 }
 
 #root{
     height: 100%;
+}
+
+.img-container{
+    width: 100px;
+}
+
+.bg-lightgray{
+    background-color: #EAEAEA;
+}
+.circle{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
 }
