--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body{
     height: 100%;
 }
 
+/* profilo */
 .img-container{
     width: 100px;
 }
@@ -24,4 +25,14 @@ body{
     border-radius: 50%;
     width: 50px;
     height: 50px;
+}
+
+.text-lightgray{
+    color: #b1b1b1;
+}
+
+/* notifiche */
+.notifiche{
+    background-color: #8edafc; 
+    padding: 1rem;
 }
