--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@ body{
     background: linear-gradient(0deg,  rgb(236, 229, 221) 85% ,  rgb(	18, 140, 126) 10%);
     }
 
+i{
+    color: gray;
+}
+
 .app{
     height: 90%;
     width: 80%;
@@ -79,5 +83,12 @@ body{
 .chatbox{
     background-image: url('/assets/img/mine.jpg');
     overflow-y: auto;
-    height: calc(100% - 70px);
+    height: calc(100% - 120px);
+}
+
+
+/* bottom part */
+.user-input{
+    background-color: #f5f5f5;
+    height: 50px;
 }
