--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,12 @@ i{
     height: calc(100% - 120px);
 }
 
+.message{
+    width: 300px;
+    border-radius: 15px;
+    background-color: green
+
+}
 
 /* bottom part */
 .user-input{
